<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/sett_title"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rgStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbDefault"
            style="@style/Widget.App.RadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:tag="default"
            android:text="@string/sett_style_default"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbSoza"
            style="@style/Widget.App.RadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="soza"
            android:text="@string/sett_style_soza"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

    </RadioGroup>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbDarkTheme"
        style="@style/Widget.App.CheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:text="@string/sett_dark_theme"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbAmoledTheme"
        style="@style/Widget.App.CheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:layoutDirection="rtl"
        android:text="@string/sett_amoled_theme"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbMonet"
        style="@style/Widget.App.CheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:layoutDirection="rtl"
        android:text="@string/sett_monet"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbGradient"
        style="@style/Widget.App.CheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:text="@string/sett_gradient"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

</LinearLayout>
